# Haxible

./: .gitattributes  README.md  flake.nix  haxible.cabal  hie.yaml
app/: Main.hs  wrapper.py
src/: Haxible.hs
src/Haxible/: Codegen.hs  Connection.hs  DataSource.hs  Eval.hs  Import.hs  Normalize.hs  Parser.hs  Play.hs  Prelude.hs  Report.hs  Syntax.hs
test/: Spec.hs  adder.ast  adder.golden  adder.hs  adder.yaml  demo.golden  demo.hs  demo.yaml  includer.ast  includer.golden  includer.hs  includer.yaml  inventory  loop.golden  loop.hs  register-between-play.hs  register-between-play.yaml  simple.ast  simple.golden  simple.hs  simple.yaml
test/playbooks/: README.md  adder.ast  adder.hs  adder.yaml  block.ast  block.hs  block.yaml  command.ast  command.hs  command.yaml  demo.ast  demo.hs  demo.plantuml  demo.yaml  dependency.ast  dependency.hs  dependency.yaml  facts.ast  facts.hs  facts.yaml  gather-facts.ast  gather-facts.hs  gather-facts.yaml  handlers.ast  handlers.hs  handlers.yaml  include-vars.ast  include-vars.hs  include-vars.yaml  includer.ast  includer.hs  includer.yaml  inventory  loop-when.ast  loop-when.hs  loop-when.yaml  loop.ast  loop.hs  loop.yaml  play.ast  (+40 more)
test/playbooks/roles/adder/defaults/: main.yaml
test/playbooks/roles/adder/tasks/: main.yaml
test/playbooks/roles/container-service/defaults/: main.yaml
test/playbooks/roles/container-service/tasks/: main.yaml
test/playbooks/roles/ensure-pip/tasks/: main.yaml
test/playbooks/roles/ensure-tox/tasks/: main.yaml
test/playbooks/roles/print/defaults/: main.yaml
test/playbooks/roles/print/tasks/: main.yaml
test/playbooks/tasks/: greet.yaml  print.yaml
test/playbooks/templates/: file.j2
test/roles/adder/tasks/: main.yaml
test/roles/container-service/tasks/: main.yaml
test/roles/container-service/vars/: redhat.yaml
test/tasks/: other-tasks.yaml
